[package]
name = "corkboard"
version = "0.1.0"
edition = "2021"

[features]
https = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.5.3"
image = { version = "0.24.7", features = ["webp-encoder"] }
actix-web = "4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
actix-multipart = "0.6.1"
serde-hex = "0.1.0"
pretty_env_logger = "0.5.0"
actix-cors = "0.6.4"
rand = "0.8.5"
mime = "0.3.17"
gif = "0.13.1"
